--- a/website/nav.html
+++ b/website/nav.html
@@ -4,15 +4,15 @@
     <table>
     <tr>
         <td style="text-align: left;"> 
-            <homebutton><a href='/index.shtml'>cpl library</a></homebutton>
+            <homebutton><a style="text-decoration: none;" href='/index.shtml'>cpl library</a></homebutton>
         </td>
         <td style="text-align: right;">
         <ul>
-            <li><a class="links" href='/about.shtml'>about </a></li>
-            <li><a class="links" href='/download.shtml'>download </a></li>
-            <li><a class="links" href='/documentation.shtml'>documentation </a></li>
-            <li><a class="links" href='/faq.shtml'>faq </a></li>
-            <li><a class="links" href='/contact.shtml'>contact </a></li>
+            <li><a style="text-decoration: none;" class="links" href='/about.shtml'>about </a></li>
+            <li><a style="text-decoration: none;" class="links" href='/download.shtml'>download </a></li>
+            <li><a style="text-decoration: none;" class="links" href='/documentation.shtml'>documentation </a></li>
+            <li><a style="text-decoration: none;" class="links" href='/faq.shtml'>faq </a></li>
+            <li><a style="text-decoration: none;" class="links" href='/contact.shtml'>contact </a></li>
         </ul>
         </td>
     </tr>
