Added automated generation of API and examples doc

--- a/website/user-guide/demo-codes/cfd_sendrecv_cpp.html
+++ b/website/user-guide/demo-codes/cfd_sendrecv_cpp.html
@@ -74,6 +74,8 @@ http://www.gnu.org/software/src-highlite -->
 
    <i><font color="#9A1900">// Block before checking if successful</font></i>
    <b><font color="#000000">MPI_Barrier</font></b><font color="#990000">(</font>MPI_COMM_WORLD<font color="#990000">);</font>
+
+   <b><font color="#000000">MPI_Finalize</font></b><font color="#990000">();</font>
    
 <font color="#FF0000">}</font>
 </tt></pre>
