--- a/website/user-guide/demo-codes/cfd_sendrecv_fort.html
+++ b/website/user-guide/demo-codes/cfd_sendrecv_fort.html
@@ -81,5 +81,8 @@ http://www.gnu.org/software/src-highlite -->
 
     <i><font color="#9A1900">!Block before checking if successful</font></i>
     <b><font color="#0000FF">call</font></b> <b><font color="#000000">MPI_Barrier</font></b><font color="#990000">(</font>MPI_COMM_WORLD<font color="#990000">,</font> ierr<font color="#990000">)</font>
+
+    <b><font color="#0000FF">call</font></b> <b><font color="#000000">MPI_finalize</font></b><font color="#990000">(</font>ierr<font color="#990000">)</font>
+
 <b><font color="#0000FF">end</font></b> <b><font color="#0000FF">program</font></b> cfd_cpl_example
 </tt></pre>
