--- a/website/user-guide/demo-codes/md_sendrecv_cpp.html
+++ b/website/user-guide/demo-codes/md_sendrecv_cpp.html
@@ -91,5 +91,6 @@ http://www.gnu.org/software/src-highlite -->
    <b><font color="#0000FF">if</font></b> <font color="#990000">(</font>CPL<font color="#990000">::</font><b><font color="#000000">overlap</font></b><font color="#990000">()</font> <font color="#990000">&amp;&amp;</font> no_error<font color="#990000">)</font>
        <b><font color="#000000">printf</font></b><font color="#990000">(</font><font color="#FF0000">"MD -- (rank=%2d) CELLS HAVE BEEN RECEIVED CORRECTLY.</font><font color="#CC33CC">\n</font><font color="#FF0000">"</font><font color="#990000">,</font> rank<font color="#990000">);</font>
    <b><font color="#000000">MPI_Barrier</font></b><font color="#990000">(</font>MPI_COMM_WORLD<font color="#990000">);</font>
+   <b><font color="#000000">MPI_Finalize</font></b><font color="#990000">();</font>
 <font color="#FF0000">}</font>
 </tt></pre>
