Corrected utils source code update. Moved WORLD_COMM communicator in CPL_finalize for case before setup. Added guess of CPL_PATH based on folder structure in a number of files. Add a few COMM_FREE to examples to remove error messages. Changed MPI_cart_create periodic input to logicals (integers for openmpi i think). Changed send to ssend in CPL_send to try to remove a MPI_request leak (not fixed yet).

--- a/website/user-guide/demo-codes/md_sendrecv_cpp.html
+++ b/website/user-guide/demo-codes/md_sendrecv_cpp.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.6
+<!-- Generator: GNU source-highlight 3.1.5
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -15,11 +15,6 @@ http://www.gnu.org/software/src-highlite -->
 
    <font color="#009900">int</font> MD_realm <font color="#990000">=</font> <font color="#993399">2</font><font color="#990000">,</font> MD_COMM<font color="#990000">;</font>
    CPL<font color="#990000">::</font><b><font color="#000000">init</font></b><font color="#990000">(</font>MD_realm<font color="#990000">,</font> MD_COMM<font color="#990000">);</font>
-
-   <i><font color="#9A1900">// Parameters</font></i>
-   <font color="#009900">int</font> dt <font color="#990000">=</font> <font color="#993399">0.1</font><font color="#990000">;</font>
-   <font color="#009900">double</font> density <font color="#990000">=</font> <font color="#993399">0.8</font><font color="#990000">;</font>
-   <font color="#009900">int</font> nsteps<font color="#990000">,</font> initialstep<font color="#990000">;</font>
 
    <i><font color="#9A1900">// Parameters of the cpu topology (cartesian grid)</font></i>
    <font color="#009900">double</font> xyzL<font color="#990000">[</font><font color="#993399">3</font><font color="#990000">]</font> <font color="#990000">=</font> <font color="#FF0000">{</font><font color="#993399">10.0</font><font color="#990000">,</font> <font color="#993399">10.0</font><font color="#990000">,</font> <font color="#993399">10.0</font><font color="#FF0000">}</font><font color="#990000">;</font>
@@ -43,7 +38,7 @@ http://www.gnu.org/software/src-highlite -->
    <b><font color="#000000">MPI_Cart_create</font></b><font color="#990000">(</font>MD_COMM<font color="#990000">,</font> <font color="#993399">3</font><font color="#990000">,</font> npxyz<font color="#990000">,</font> periods<font color="#990000">,</font> <b><font color="#0000FF">true</font></b><font color="#990000">,</font> <font color="#990000">&amp;</font>CART_COMM<font color="#990000">);</font>
 
    <i><font color="#9A1900">// Coupler setup</font></i>
-   CPL<font color="#990000">::</font><b><font color="#000000">setup_md</font></b><font color="#990000">(</font>nsteps<font color="#990000">,</font> initialstep<font color="#990000">,</font> dt<font color="#990000">,</font> CART_COMM<font color="#990000">,</font> xyzL<font color="#990000">,</font> xyz_orig<font color="#990000">,</font> density<font color="#990000">);</font>
+   CPL<font color="#990000">::</font><b><font color="#000000">setup_md</font></b><font color="#990000">(</font>CART_COMM<font color="#990000">,</font> xyzL<font color="#990000">,</font> xyz_orig<font color="#990000">);</font>
 
    <i><font color="#9A1900">// Get detail for grid</font></i>
    <font color="#009900">int</font> Ncells<font color="#990000">[</font><font color="#993399">3</font><font color="#990000">];</font>
@@ -91,6 +86,11 @@ http://www.gnu.org/software/src-highlite -->
    <b><font color="#0000FF">if</font></b> <font color="#990000">(</font>CPL<font color="#990000">::</font><b><font color="#000000">overlap</font></b><font color="#990000">()</font> <font color="#990000">&amp;&amp;</font> no_error<font color="#990000">)</font>
        <b><font color="#000000">printf</font></b><font color="#990000">(</font><font color="#FF0000">"MD -- (rank=%2d) CELLS HAVE BEEN RECEIVED CORRECTLY.</font><font color="#CC33CC">\n</font><font color="#FF0000">"</font><font color="#990000">,</font> rank<font color="#990000">);</font>
    <b><font color="#000000">MPI_Barrier</font></b><font color="#990000">(</font>MPI_COMM_WORLD<font color="#990000">);</font>
+
+   <i><font color="#9A1900">// Release all coupler comms </font></i>
+   CPL<font color="#990000">::</font><b><font color="#000000">finalize</font></b><font color="#990000">();</font>
+    <b><font color="#000000">MPI_Comm_free</font></b><font color="#990000">(&amp;</font>MD_COMM<font color="#990000">);</font>
+    <b><font color="#000000">MPI_Comm_free</font></b><font color="#990000">(&amp;</font>CART_COMM<font color="#990000">);</font>
    <b><font color="#000000">MPI_Finalize</font></b><font color="#990000">();</font>
 <font color="#FF0000">}</font>
 </tt></pre>
