--- a/website/user-guide/demo-codes/cfd_sendrecv_cpp.html
+++ b/website/user-guide/demo-codes/cfd_sendrecv_cpp.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.6
+<!-- Generator: GNU source-highlight 3.1.5
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -13,11 +13,6 @@ http://www.gnu.org/software/src-highlite -->
 
    <font color="#009900">int</font> CFD_realm <font color="#990000">=</font> <font color="#993399">1</font><font color="#990000">,</font> CFD_COMM<font color="#990000">;</font>
    CPL<font color="#990000">::</font><b><font color="#000000">init</font></b><font color="#990000">(</font>CFD_realm<font color="#990000">,</font> CFD_COMM<font color="#990000">);</font>
-
-   <i><font color="#9A1900">// Parameters</font></i>
-   <font color="#009900">int</font> dt <font color="#990000">=</font> <font color="#993399">0.1</font><font color="#990000">;</font>
-   <font color="#009900">double</font> density <font color="#990000">=</font> <font color="#993399">0.8</font><font color="#990000">;</font>
-   <font color="#009900">int</font> nsteps <font color="#990000">=</font> <font color="#993399">100</font><font color="#990000">;</font>
 
    <i><font color="#9A1900">// Parameters of the cpu topology (cartesian grid)</font></i>
    <font color="#009900">double</font> xyzL<font color="#990000">[</font><font color="#993399">3</font><font color="#990000">]</font> <font color="#990000">=</font> <font color="#FF0000">{</font><font color="#993399">10.0</font><font color="#990000">,</font> <font color="#993399">10.0</font><font color="#990000">,</font> <font color="#993399">10.0</font><font color="#FF0000">}</font><font color="#990000">;</font>
@@ -42,7 +37,7 @@ http://www.gnu.org/software/src-highlite -->
    <b><font color="#000000">MPI_Cart_create</font></b><font color="#990000">(</font>CFD_COMM<font color="#990000">,</font> <font color="#993399">3</font><font color="#990000">,</font> npxyz<font color="#990000">,</font> periods<font color="#990000">,</font> <b><font color="#0000FF">true</font></b><font color="#990000">,</font> <font color="#990000">&amp;</font>CART_COMM<font color="#990000">);</font>
 
    <i><font color="#9A1900">// Coupler setup</font></i>
-   CPL<font color="#990000">::</font><b><font color="#000000">setup_cfd</font></b><font color="#990000">(</font>nsteps<font color="#990000">,</font> dt<font color="#990000">,</font> CART_COMM<font color="#990000">,</font> xyzL<font color="#990000">,</font> xyz_orig<font color="#990000">,</font> ncxyz<font color="#990000">,</font> density<font color="#990000">);</font>
+   CPL<font color="#990000">::</font><b><font color="#000000">setup_cfd</font></b><font color="#990000">(</font>CART_COMM<font color="#990000">,</font> xyzL<font color="#990000">,</font> xyz_orig<font color="#990000">,</font> ncxyz<font color="#990000">);</font>
 
    <i><font color="#9A1900">// Get detail for grid</font></i>
    <font color="#009900">int</font> Ncells<font color="#990000">[</font><font color="#993399">3</font><font color="#990000">];</font>
@@ -75,6 +70,10 @@ http://www.gnu.org/software/src-highlite -->
    <i><font color="#9A1900">// Block before checking if successful</font></i>
    <b><font color="#000000">MPI_Barrier</font></b><font color="#990000">(</font>MPI_COMM_WORLD<font color="#990000">);</font>
 
+   <i><font color="#9A1900">// Release all coupler comms </font></i>
+   CPL<font color="#990000">::</font><b><font color="#000000">finalize</font></b><font color="#990000">();</font>
+    <b><font color="#000000">MPI_Comm_free</font></b><font color="#990000">(&amp;</font>CFD_COMM<font color="#990000">);</font>
+    <b><font color="#000000">MPI_Comm_free</font></b><font color="#990000">(&amp;</font>CART_COMM<font color="#990000">);</font>
    <b><font color="#000000">MPI_Finalize</font></b><font color="#990000">();</font>
    
 <font color="#FF0000">}</font>
