Work on website user guide

--- a/website/user-guide/demo-codes/md_cpl.html
+++ b/website/user-guide/demo-codes/md_cpl.html
@@ -57,7 +57,7 @@ md <font color="#990000">=</font> <b><font color="#000000">MD</font></b><font co
     <b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"MD time = "</font><font color="#990000">,</font> md<font color="#990000">.</font>tstep<font color="#990000">,</font> md<font color="#990000">.</font>time<font color="#990000">)</font>
 
     <i><font color="#9A1900"># Calculate force</font></i>
-    <i><font color="#9A1900">#md.force()</font></i>
+    md<font color="#990000">.</font><b><font color="#000000">force</font></b><font color="#990000">()</font>
 
     <i><font color="#9A1900">#=======================================================</font></i>
     <i><font color="#9A1900"># Call to CPL-LIBRARY</font></i>
