--- a/website/user-guide/demo-codes/cfd_send_cells_python.html
+++ b/website/user-guide/demo-codes/cfd_send_cells_python.html
@@ -6,6 +6,7 @@ http://www.gnu.org/software/src-highlite -->
 <b><font color="#000080">from</font></b> cplpy <b><font color="#000080">import</font></b> CPL
 <b><font color="#000080">import</font></b> numpy as np
 
+comm <font color="#990000">=</font> MPI<font color="#990000">.</font>COMM_WORLD
 CPL <font color="#990000">=</font> <b><font color="#000000">CPL</font></b><font color="#990000">()</font>
 nsteps <font color="#990000">=</font> <font color="#993399">1</font>
 dt <font color="#990000">=</font> <font color="#993399">0.2</font>
