--- a/website/user-guide/demo-codes/md_recv_cells_cpp.html
+++ b/website/user-guide/demo-codes/md_recv_cells_cpp.html
@@ -2,11 +2,13 @@
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
-<pre><tt><b><font color="#000080">#include</font></b> <font color="#FF0000">"CPL.h"</font>
-<b><font color="#000080">#include</font></b> <font color="#FF0000">"mpi.h"</font>
+<pre><tt><b><font color="#000080">#include</font></b> <font color="#FF0000">"mpi.h"</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">&lt;iostream&gt;</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">&lt;stdio.h&gt;</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">&lt;string&gt;</font>
+
+<b><font color="#000080">#include</font></b> <font color="#FF0000">"cpl.h"</font>
+<b><font color="#000080">#include</font></b> <font color="#FF0000">"CPL_ndArray.h"</font>
 
 <b><font color="#0000FF">using</font></b> <b><font color="#0000FF">namespace</font></b> std<font color="#990000">;</font>
 
