--- a/website/user-guide/demo-codes/md_recv_cells_python.html
+++ b/website/user-guide/demo-codes/md_recv_cells_python.html
@@ -21,6 +21,7 @@ http://www.gnu.org/software/src-highlite -->
     <b><font color="#0000FF">return</font></b> dic
 
 comm <font color="#990000">=</font> MPI<font color="#990000">.</font>COMM_WORLD
+<i><font color="#9A1900">#comm.Barrier()</font></i>
 CPL <font color="#990000">=</font> <b><font color="#000000">CPL</font></b><font color="#990000">()</font>
 
 <i><font color="#9A1900"># Parameters of the cpu topology (cartesian grid)</font></i>
