--- a/website/user-guide/demo-codes/Interactive_cpp.html
+++ b/website/user-guide/demo-codes/Interactive_cpp.html
@@ -2,12 +2,14 @@
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
-<pre><tt><b><font color="#000080">#include</font></b> <font color="#FF0000">"CPL.h"</font>
+<pre><tt><b><font color="#000080">#include</font></b> <font color="#FF0000">"cpl.h"</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">"mpi.h"</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">&lt;iostream&gt;</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">&lt;math.h&gt;</font>       <i><font color="#9A1900">/* sin */</font></i>
 
 <b><font color="#000080">#define</font></b> pi <font color="#993399">3.14159265359</font>
+
+<b><font color="#000080">#include</font></b> <font color="#FF0000">"CPL_ndArray.h"</font>
 
 <b><font color="#0000FF">using</font></b> <b><font color="#0000FF">namespace</font></b> std<font color="#990000">;</font>
 
