--- a/website/user-guide/demo-codes/cfd_init_cpp.html
+++ b/website/user-guide/demo-codes/cfd_init_cpp.html
@@ -2,7 +2,7 @@
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
-<pre><tt><b><font color="#000080">#include</font></b> <font color="#FF0000">"CPL.h"</font>
+<pre><tt><b><font color="#000080">#include</font></b> <font color="#FF0000">"cpl.h"</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">"mpi.h"</font>
 <b><font color="#000080">#include</font></b> <font color="#FF0000">&lt;iostream&gt;</font>
 
